Fixed the horizontal scroll bar (final)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -281,7 +281,7 @@ a:focus {
 }
 
 .header img {
-	max-width: 768px;
+	width: 71%;
 }
 
 /*-------*/
